fixed header and overflow

--- a/css/landing.css
+++ b/css/landing.css
@@ -4,6 +4,14 @@ body {
   overflow-x: hidden;
 }
 
+
+.landingContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
+}
+
 .navContainer {
   overflow: hidden;
   position: fixed;
@@ -127,192 +135,24 @@ body {
   }
 }
 
-/* nav {
-  z-index: 2;
-  height: 80px;
-  width: 100%;
-  font-family: 'Quicksand', sans-serif;
-}
-
-nav ul {
-  float: right;
-  margin-right: 20px;
-  z-index: 2;
-}
-
-nav ul li {
-  display: inline-block;
-  line-height: 80px;
-  margin: 0 5px;
-  z-index: 2;
-}
-
-nav ul li a {
-  color: #BAB0EA;
-  font-size: 14px;
-  padding: 7px 10px;
-  border-radius: 3px;
-  text-transform: uppercase;
-  font-weight: bold;
-  z-index: 2;
-}
-
-a.active,
-a:hover {
-  background: #efa7fe41;
-  transition: .5s;
-}
-
-.checkbtn {
-  font-size: 20px;
-  color: white;
-  float: right;
-  line-height: 80px;
-  margin-right: 25px;
-  cursor: pointer;
-  display: none;
-  position: relative;
-
-}
-
-#check {
-  display: none;
-  z-index: 2;
-}
-
-#logo {
-  z-index: 2;
-  height: 80px;
-  width: 150px;
-  position: absolute;
-  margin-top: 0px;
-}
-
-@media (max-width: 952px) {
-  .navbar-brand {
-    height: 82px;
-    width: 152px;
-    padding-left: 50px;
-    z-index: 2 !important;
-  }
-
-  nav ul li a {
-    font-size: 16px;
-    z-index: 2;
+@media (max-width:850px) {
+  .navbar ul li p {
+    font-size: 0.9rem;
+    padding: 10px 10px;
   }
 }
 
-@media (max-width: 858px) {
-  .checkbtn {
-    display: block !important;
-    z-index: 10 !important;
-    position: fixed;
-    right: 0px;
+
+@media screen and (max-width: 600px) {
+  .navbar li {
+    margin: 20px 0;
   }
-
-  #logo {
-    position: absolute;
-    left: 18px;
-    margin-right: 10px;
-    top: 21px;
-  }
-
-  footer .social_icon {
-    position: relative;
-    top: 468px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px 0;
-    filter: drop-shadow(5px 5px 5px rgb(10, 10, 10));
-  }
-
-  nav ul {
-    position: fixed;
-    display: block;
-    width: 100%;
-    height: 200vh;
-    background: #22003D;
-    top: 0px;
-    left: -100%;
-
-    text-align: center;
-    transition: all .5s;
-    z-index: 2 !important;
-  }
-
-  .navbar-brand {
-    height: 82px;
-    width: 152px;
-    padding-left: 30px;
-    z-index: 2 !important;
-
-  }
-
-  nav ul li {
-    display: block;
-    margin: 30px 0;
-    line-height: 30px;
-    z-index: 2 !important;
-
-
-  }
-
-  nav ul li a {
-    font-size: 16px;
-    z-index: 2;
-    top: 50px;
-  }
-
-  a:hover,
-  a.active {
-    background: none;
-    color: #360a36;
-    z-index: 2;
-  }
-
-  #check:checked~ul {
-    left: 0;
-    z-index: 2;
-  }
-
 }
-
-a.menu {
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
-  text-decoration: none;
-  position: relative;
-  border-radius: 20px;
-  z-index: 2;
-} */
-
 
 .scrolled {
   background-color: #2b0054e1;
 }
 
-/* .neon {
-  font-family: 'Quicksand', sans-serif;
-  color: #020737;
-  text-shadow: 0 0 3vw #44E0F7;
-}
-
-
-.neon {
-  animation: neon 1s ease infinite;
-  -moz-animation: neon 1s ease infinite;
-  -webkit-animation: neon 1s ease infinite;
-}
-
-@keyframes neon {
-
-  0%,
-  100% {
-    text-shadow: 0 0 1vw #B091D4, 0 0 3vw #B091D4, 0 0 10vw #B091D4, 0 0 10vw #B091D4, 0 0 .4vw #6FB7DD, .5vw .5vw .1vw #6FB7DD;
-    color: #020737;
-  }
-} */
 
 .paralax {
   position: absolute;
@@ -349,12 +189,12 @@ a.menu {
 }
 
 .content-header {
-  font-family: 'Neucha',cursive;
+  font-family: 'Neucha', cursive;
   font-family: sans-serif;
   color: white;
   text-align: center;
   text-transform: uppercase;
-  margin-right: -20%;
+  margin-right: -10%;
 
 }
 
@@ -397,13 +237,13 @@ a.menu {
   width: 320px;
   color: #ffffff !important;
   font-size: 90px !important;
-  font-family: 'Neucha',cursive;
+  font-family: 'Neucha', cursive;
   font-weight: 700;
   text-transform: uppercase;
   transform: translate(-50%, -50%);
   margin-bottom: 15% !important;
   text-shadow: 0 0 5px #B5DBF0, 0 0 10px #93109C,
-  0 0 21px #E7A084;
+    0 0 21px #E7A084;
 }
 
 .sub {
@@ -431,6 +271,11 @@ a.menu {
 
 }
 
+@media (min-width:760px) and (max-width :949px) {
+  .content-header {
+    margin-right: -210px;
+  }
+}
 
 @media (min-width:760px)and(max-width :949px) {
 
@@ -444,7 +289,12 @@ a.menu {
   .sub {
     font-size: 15px !important;
   }
+
+  .content-header {
+    margin-right: -210px;
+  }
 }
+
 
 @media (min-width:746px)and(max-width :760px) {
 
@@ -466,7 +316,7 @@ a.menu {
   .loader {
     position: absolute;
     top: -4%;
-    left: 55%;
+    left: 50%;
     font-size: 53px !important;
   }
 
@@ -612,6 +462,10 @@ a.menu {
     text-align: left;
     margin-right: 20%;
 
+  }
+
+  .content-header {
+    margin-right: -20%;
   }
 }
 
